--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -52,6 +52,35 @@ body {
     background-color: #f3f4f6;
     -webkit-font-smoothing: antialiased;
     transition: background-color 0.5s ease, color 0.5s ease;
+
+    /* Mobile Native App Feel */
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Safari */
+    -khtml-user-select: none;
+    /* Konqueror HTML */
+    -moz-user-select: none;
+    /* Old versions of Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version */
+    -webkit-tap-highlight-color: transparent;
+    /* Remove blue highlight on click */
+
+    /* Safely clear notch / status bar / home indicators */
+    padding-top: env(safe-area-inset-top);
+    padding-bottom: env(safe-area-inset-bottom);
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
+}
+
+/* Let users select text inside inputs and textareas */
+input,
+textarea {
+    -webkit-user-select: auto;
+    user-select: auto;
 }
 
 /* --- FESTIVE MODE GLOBAL OVERRIDES --- */
